# onnxruntime_inference

./: .clang-format  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
Dockerfile/: Dockerfile
c_api/: onnxruntime_inference_test.cpp
c_api/image_manipulate/: CMakeLists.txt  image_manipulate.c  image_manipulate.h
c_api/image_manipulate/test/: CMakeLists.txt  image_manipulate_test.cpp
c_api/onnxruntime_executor/: CMakeLists.txt  onnxruntime_executor.c  onnxruntime_executor.h
profiling/: valgrind.supp
python/: onnxruntime_inference_test.py
